# vcf_archives_manager

./: .gitignore  CMakeLists.txt  README.md  gui.cpp  gui.h  helpers.cpp  helpers.h  main.cpp  myWindow.cpp  myWindow.h  vcf_operations.cpp  vcf_operations.h
documentation_single_file_from_DeepSeek/: readme.txt
